--- a/VietJob_V2/packages.config
+++ b/VietJob_V2/packages.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Http" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="OpenAI" version="1.7.2" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="angularjs" version="1.8.2" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
   <package id="jQuery" version="3.3.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
@@ -12,6 +30,5 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
